service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: chmury-z2-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: chmury-z2
  type: NodePort
